fix navigation spacing

--- a/src/app/client/navigation/navigation.component.css
+++ b/src/app/client/navigation/navigation.component.css
@@ -20,8 +20,6 @@
 .nav-box {
     position: relative;
     top: calc(11vh + 8vw);
-    left: 8vw;
-    right: 10vw;
     z-index: 90;
 }
 
